feat: initialize Astro project scaffold
- Astro 5 with static output for Cloudflare Pages
- Content collection for multilingual articles (zh/en/ja/zh-cn)
- Base layout with full SEO, Schema.org, i18n support
- Article layout with language switching
- Blog listing with pillar filtering
- All 5 pages: Home, Blog, Projects, About, Feed
- 17 article metadata entries in data registry
- 2 sample articles (incarnation-ai-embodiment, ai-agent-planning-guide)

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -1,7 +1,4 @@
 {
   "name": "paulkuo-tw",
-  "compatibility_date": "2026-02-20",
-  "assets": {
-    "directory": "."
-  }
+  "compatibility_date": "2024-01-01"
 }
