feat: Phase 3 AIO/Agentic SEO優化
- index: Person+WebSite @graph JSON-LD, 加入worksFor/jobTitle
- articles: Article→BlogPosting, 加abstract, 用@id串連Person entity
- blog: 加入CollectionPage+ItemList JSON-LD
- BaseLayout: 加og:image/locale/site_name, twitter card, canonical link
- about: h2→h1(主標題), h4→h2(pillar items), 修正heading hierarchy
- projects: h3→h2(項目標題), 修正h2>CircleFlow</h3>不匹配bug
- .gitignore: 排除backup和symlink

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ gen-lang-client-*.json
 
 # Content managed by paulkuo-content repo
 src/content/articles/
+paulkuo_backup.html
+src/content/articles
