--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,6 @@ gen-lang-client-*.json
 src/content/articles/
 paulkuo_backup.html
 src/content/articles
+
+# Dynamic feed data (generated at build time)
+src/data/feed.json
