--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "astro": "^5.17.1",
-    "googleapis": "^171.4.0"
+    "googleapis": "^171.4.0",
+    "jose": "^6.1.3"
   }
 }
