--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,9 +35,10 @@ jobs:
         run: npm ci
 
       - name: Fetch social feed
-        run: node scripts/fetch-feed.mjs
+        run: node scripts/fetch-feed.mjs || echo 'Feed fetch failed, using committed feed.json'
         env:
           GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
+        continue-on-error: true
 
       - name: Build
         run: npm run build
