--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,11 +34,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Fetch social feed
-        run: node scripts/fetch-feed.mjs || echo 'Feed fetch failed, using committed feed.json'
-        env:
-          GOOGLE_SERVICE_ACCOUNT_JSON: ${{ secrets.GOOGLE_SERVICE_ACCOUNT_JSON }}
-        continue-on-error: true
+      # Feed data comes from committed src/data/feed.json
+      # Update locally: node scripts/fetch-feed.mjs && git commit
+      # TODO: fix CI Google Sheets auth (private_key newline issue) to enable auto-fetch
 
       - name: Build
         run: npm run build
