--- a/.github/workflows/publish-social.yml
+++ b/.github/workflows/publish-social.yml
@@ -121,7 +121,7 @@ jobs:
 
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add data/published-slugs.json data/social-logs/
+          git add data/published-slugs.json data/social-logs/ data/costs.jsonl
           git diff --staged --quiet || git commit -m "chore: record published slugs" && git push || true
 
       # 🟡 FIX: GitHub Issue 通知 — 每次發佈建一個 issue，信箱會收到
