--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add src/content/articles/en/ src/content/articles/ja/ src/content/articles/zh-cn/
+          git add src/content/articles/en/ src/content/articles/ja/ src/content/articles/zh-cn/ data/costs.jsonl
           if git diff --cached --quiet; then
             echo "No translations to commit"
           else
