feat: add translation manifest + idempotent translate script
- translation-manifest.json tracks source hash + translation state for all 62 articles
- translate-article.mjs now checks manifest before calling API (skip if source unchanged)
- translate.yml commits manifest alongside translations
- prevents duplicate API calls (~$20 saved per accidental re-run)

--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -51,7 +51,7 @@ jobs:
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-          git add src/content/articles/en/ src/content/articles/ja/ src/content/articles/zh-cn/ data/costs.jsonl
+          git add src/content/articles/en/ src/content/articles/ja/ src/content/articles/zh-cn/ data/costs.jsonl data/translation-manifest.json
           if git diff --cached --quiet; then
             echo "No translations to commit"
           else
