fix: compress DALL-E images <950KB + fix Reddit subreddit param
Bug 1: DALL-E 3 outputs 1.3-1.8MB PNG, OneUp rejects >1MB.
Added sharp-based compression (progressive JPEG quality reduction,
ported from oneup_post.py resize_for_platform logic).

Bug 2: Reddit subreddit param passed implicitly via hasReddit check
but never reached API. Now passed explicitly from caller.

Also: npm install sharp step added to workflow.

--- a/.github/workflows/publish-social.yml
+++ b/.github/workflows/publish-social.yml
@@ -83,6 +83,10 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install dependencies
+        if: steps.detect.outputs.skip == 'false'
+        run: npm install sharp
+
       - name: Generate summaries and publish
         id: publish
         if: steps.detect.outputs.skip == 'false'
