fix: Cloudflare routing for static txt/xml + AIO enhancements

--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,6 +2,7 @@
   "name": "paulkuo-tw",
   "compatibility_date": "2026-02-20",
   "assets": {
-    "directory": "dist"
+    "directory": "dist",
+    "not_found_handling": "none"
   }
 }
