--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@astrojs/sitemap": "^3.7.0",
     "astro": "^5.17.1",
     "googleapis": "^171.4.0",
-    "jose": "^6.1.3"
+    "jose": "^6.1.3",
+    "satori": "^0.19.2",
+    "sharp": "^0.34.5"
   }
 }
