--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -11,6 +11,10 @@ on:
 jobs:
   translate:
     runs-on: ubuntu-latest
+    # 跳過條件：commit message 包含 [skip-translate] 或 [skip ci]
+    if: >-
+      !contains(github.event.head_commit.message, '[skip-translate]') &&
+      !contains(github.event.head_commit.message, '[skip ci]')
     permissions:
       contents: write
     
