fix: add npm ci to translate workflow for sharp dependency [skip-translate]

--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -42,6 +42,10 @@ jobs:
         with:
           node-version: '20'
 
+      - name: Install dependencies
+        if: steps.changed.outputs.skip == 'false'
+        run: npm ci
+
       - name: Translate articles
         if: steps.changed.outputs.skip == 'false'
         env:
